# GIT_PR_ENV

./: .env.example  .gitignore  README.md  __init__.py  agent.py  client.py  inference.py  models.py  openenv.yaml
data/: issues.json  tasks.json  url_repo_rules.json
envs/GitHubIssueTriage/: __init__.py  client.py  pyproject.toml
envs/GitHubIssueTriage/server/: GitHubIssueTriage_environment.py  __init__.py  actions.py  app.py  grader.py  loader.py  observation.py  transitions.py
envs/GitHubIssueTriageManager/: README.md  client.py  models.py  pyproject.toml
envs/GitHubIssueTriageManager/server/: actions.py  app.py  environment.py  grader.py  loader.py  observation.py  reward.py  termination.py  transitions.py
openenv_GitHubIssueTriage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: GitHubIssueTriage_environment.py  __init__.py  actions.py  app.py  grader.py  loader.py  observation.py  reward.py  termination.py  transitions.py
tests/: test_loader_auto_tasks.py  test_score_normalization.py
